Fix: sync package-lock.json with package.json

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js",
+    "start": "node index.js",
+    "dev": "node index.js",
     "test": "echo \"No tests specified - skipping\""
   },
   "dependencies": {
@@ -16,6 +16,6 @@
     "node": ">=20.0.0"
   },
   "keywords": ["express", "server", "azure"],
-  "author": "Your Name",
+  "author": "Amish Kumar",
   "license": "MIT"
 }
