--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "simpleserver",
+  "name": "my-azure-app",
   "version": "1.0.0",
-  "description": "Simple Express server for Azure deployment",
-  "main": "server.js",
-  "type": "module",
+  "description": "Simple Express app for Azure",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js",
-    "test": "echo \"No tests specified - skipping\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2"
   },
   "engines": {
-    "node": ">=20.0.0"
-  },
-  "keywords": ["express", "server", "azure"],
-  "author": "Amish Kumar",
-  "license": "MIT"
+    "node": ">=18.0.0"
+  }
 }
